# integracar-chatbot

./: .css  .gitignore  app.py  docker-compose.yaml  pyproject.toml
chatbot/: ai_models.py
chatbot/apps/accounts/: managers.py  models.py
chatbot/apps/chat/: views.py
chatbot/apps/chat/templates/chat/: chat.html
chatbot/apps/chat/templates/components/chat/: bot_message.html
chatbot/apps/contas/: admin.py  forms.py  models.py  urls.py  views.py
chatbot/apps/contas/migrations/: 0001_initial.py  0002_usuario_created_at_usuario_updated_at.py  0003_usuario_is_active.py
chatbot/apps/contas/templates/contas/: login.html
chatbot/apps/ia/: admin.py  apps.py  forms.py  functions.py  indexes.py  models.py  rag.py  signals.py  tasks.py  urls.py  views.py
chatbot/apps/ia/migrations/: 0002_initial.py  0003_alter_documento_nome.py  0004_documento_conteudo_alter_documento_arquivo.py  0005_alter_embeddingdocumento_documento.py  0006_documento_status.py  0007_embeddingdocumento_bm25_index_conteudo.py  0007_embeddingdocumento_ia_embeddin_id_fd93c1_bm25.py  0008_rename_embeddingdocumento_chunkdocumeto.py  0008_rename_ia_embeddin_id_fd93c1_bm25_bm25_index_conteudo.py  0009_alter_chunkdocumeto_embedding.py
chatbot/apps/ia/templates/components/chat/: bot_message.html  bot_svg.html  user_message.html
chatbot/apps/ia/templates/ia/: chat.html  documentos.html
chatbot/core/: env.py  settings.py  urls.py
chatbot/templates/: base.html
chatbot/templates/components/: field.html  form.html  form_field.html  green_btn.html  header.html  htmx_form.html  input.html
chatbot/templates/static/css/chat/: markdown.css
